--- a/RZCollectionList-Demo/RZCollectionList-Demo/RZCollectionList-Demo-Info.plist
+++ b/RZCollectionList-Demo/RZCollectionList-Demo/RZCollectionList-Demo-Info.plist
@@ -31,6 +31,11 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
